4.jan (ws)
      - fix #6347: Multiple grace notes do not copy correctly
      (la)
      - fix #8357: Key sig properties : hide courtesy, hide naturals (patch by Miwarre)
3.jan.2011 (lv)
      - feature request #8355: bww import: add end barline
      - feature request #8355: bww import: hide key signature (not complete yet)
      - fix #8498: musicxml import/export: print-object="no" not handled for key signature
      - fix #8435: musicxml import: print-object="no" ignored on rest
2.jan.2011 (lv)
      - fix #8474: MusicXML import: Audiveris ".0" not handled in alter and in backup and forward duration
30.dec (lv)
      - fix #8428: musicxml import: voices mixed up
      - fix #4858: Courtesy accidentals do not import/export in MusicXML anymore
      - fix #8400: musicxml export: stem on whole note in triplet
29.dec (lv)
      - feature request #8355: bww import: fixed bww2mxml triplet beam
28.dec (lv)
      - feature request #8355: bww import: fixed export of metronome, triplet and stem
      - feature request #8355: bww import: fixed export of title, composer and rights
27.dec (lv)
      - feature request #8355: bww import: fixed voltas and triplets
      - feature request #8355: bww import: fixed clefs and multiple grace notes
      - feature request #8355: bww import: updated mscore regression testfiles
24.dec (lv)
      - feature request #8355: bww import: mscore regression test
      - feature request #8355: bww import: bww2mxml regression test
       (la)
      - fix #7764: crashes when open ove file (vanferry patch)
      - fix #8372: Fix to end-start-repeat bar line width (miwarre patch)
23.dec (lv)
      - feature request #8355: bww import: initial implementation
       (la)
      - fix #8369: Delete one instrument removes slurs from others
22.dec (lv)
      - feature request #8355: bww import: framework and bww to xml converter
       (la)
      - fix #8358: new score: create one measure more when pickup measure selected