@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <museScore version="1.0">
 
-   <Articulation name="staccato">
-      <gateTime>85%</gateTime>
-      </Articulation>
-   <Articulation name="staccato">
-      <gateTime>50%</gateTime>
-      </Articulation>
-   <Articulation name="tenuto">
-      <gateTime>100%</gateTime>
-      </Articulation>
+  <Articulation>
+     <gateTime>100%</gateTime>
+     <velocity>100%</velocity>
+     </Articulation>
+  <Articulation name="staccato">
+     <gateTime>85%</gateTime>
+     </Articulation>
+  <Articulation name="tenuto">
+     <gateTime>100%</gateTime>
+     </Articulation>
+  <Articulation name="sforzato">
+     <velocity>120%</velocity>
+     </Articulation>
 
    <instrument-group name="Bois">
       <instrument>
@@ -214,6 +218,16 @@
             <program>67</program>
             </channel>
          </instrument>
+      <instrument>
+        <name>Cornemuse</name>
+        <short-name>Crnmus.</short-name>
+        <clef>0</clef>
+        <aPitchRange>67-81</aPitchRange>
+        <pPitchRange>67-81</pPitchRange>
+        <channel>
+           <program>109</program>
+           </channel>
+        </instrument>
       </instrument-group>
 
    <instrument-group name="Cuivres">
