@@ -2,6 +2,7 @@
       - fix #6347: Multiple grace notes do not copy correctly
       (la)
       - fix #8357: Key sig properties : hide courtesy, hide naturals (patch by Miwarre)
+      - add bagpipe in instruments.xml, change to bagpipe sound on bww import
 3.jan.2011 (lv)
       - feature request #8355: bww import: add end barline
       - feature request #8355: bww import: hide key signature (not complete yet)
